k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery
  template:
    metadata:
      labels:
        component: celery
    spec:
      containers:
        - name: celery
          image: himanshudhiman/coderun-web:v8
          command: ["./run_celery.sh"]
