k8s/daphne-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daphne-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: daphne
  template:
    metadata:
      labels:
        component: daphne
    spec:
      containers:
        - name: daphne
          image: himanshudhiman/coderun-web:v8
          command: ["/bin/bash", "run_daphne.sh"]
          ports:
            - containerPort: 9000
