k8s/gunicorn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gunicorn-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gunicorn
  template:
    metadata:
      labels:
        component: gunicorn
    spec:
      containers:
        - name: gunicorn
          image: himanshudhiman/coderun-web:v8
          command: ["/bin/bash", "run_gunicorn.sh"]
          ports:
            - containerPort: 8000
