k8s/daphne-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daphne-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: daphne

  ports:
    - port: 9000
      targetPort: 9000
