k8s/gunicorn-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gunicorn-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gunicorn
  ports:
    - port: 8000
      targetPort: 8000
