k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gunicorn-cluster-ip-service
                port:
                  number: 8000
          - path: /ws/runcode/
            pathType: Prefix
            backend:
              service:
                name: daphne-cluster-ip-service
                port:
                  number: 9000
